manifests/Deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: foo-pipelines-demo-app
  name: foo-pipelines-demo-app
spec:
  replicas: 1
  selector:
    name: foo-pipelines-demo-app
  template:
    metadata:
      labels:
        app: foo-pipelines-demo-app
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/pipelines-demo/foo:latest
          imagePullPolicy: Always
          name: foo
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
  strategy:
    type: Recreate
