manifests/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: foo-pipelines-demo-istio-virtual-service
spec:
  hosts:
    - '*'
  gateways:
    - foo-pipelines-demo-istio-gateway
  http:
    - match:
        - uri:
            prefix: /ppdemo
      rewrite:
        uri: /
      route:
        - destination:
            host: foo-pipelines-demo-service
            port:
              number: 8080
